# stream-combinators

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: fancier_stdin_into_lines.rs  into_pairs.rs  stdin_into_lines.rs  wait_for_name.rs  wait_for_newline.rs
src/: filter_fold.rs  lib.rs  stream_sequence.rs
